# up-with-the-boids

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  window.hpp
components/: boid.h
